# DataForge-DFG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTACAO.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/data_forge.egg-info/: PKG-INFO  SOURCES.txt
src/dfg/: artifacts.py  cli.py  compile.py  compiler.py  dag.py  debug.py  docs.py  engine.py  initialization.py  log_search.py  logger.py  logging.py  seed.py  snapshot.py  state.py
src/dfg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/dfg/adapters/: base.py  factory.py  generic.py
src/dfg/sources/: __init__.py  _env.py  _retry.py  auth.py  base.py  cloud.py  database.py  file.py  pagination.py  rest.py
tests/: conftest.py  test_adapters.py  test_compiler.py  test_dag.py  test_state.py
tests_first_project/: .dfg_state.json  dfg_project.toml  meu_projeto.db
tests_first_project/models/: fct_sales.py  stg_api_users.py  stg_users.py
