[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfg"
version = "0.1.0"
description = "A vanilla Python ELT framework"
requires-python = ">=3.11"

[project.scripts]
dfg = "dfg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # Indica onde o código fonte reside
include = ["dfg*"] # Garante que apenas o pacote dfg seja incluído